--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
+   
   </head>
   <body>
+   <div class="top">
     <h1 class="title"><img src="./logo.png" /></h1>
+    <a href="" class="home">Home</a>
+      <a href="" class="blog">Blog</a>
+
+   </div>
     <div id="show-time"></div>
 
     <div class="box-container">
@@ -40,5 +46,6 @@
 
     <script src="history.js"></script>
     <script src="script.js"></script>
+     
   </body>
 </html>
