--- a/index.html
+++ b/index.html
@@ -17,8 +17,21 @@
   <body>
    <div class="top">
     <h1 class="title"><img src="./logo.png" /></h1>
-    <a href="" class="home">Home</a>
-      <a href="" class="blog">Blog</a>
+    <div>
+      <div class="d" id="navbarNav">
+        <ul class="navbar-nav ">
+
+          <li class="nav-item">
+            <a class="nav-link text-danger fs-4" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-danger fs-4" href="blog.html">Blog</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+    
 
    </div>
     <div id="show-time"></div>
