--- a/blog.html
+++ b/blog.html
@@ -40,14 +40,14 @@
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+            <button class="accordion-button " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
               aria-expanded="true" aria-controls="collapseOne">
               Difference Between Local Storage, Session Storage
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
             data-bs-parent="#accordionExample">
-            <div class="accordion-body fs-5">
+            <div class="accordion-body ">
               1)The storage capacity of local storage is 5MB/10MB.The storage capacity of session storage is 5MB.2)Local
               storage must be deleted via javascript or manually,It’s session-based and works per window or tab. This
               means that data is stored only for the duration of a session, i.e., until the browser (or tab) is
@@ -57,14 +57,14 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed fs-4" type="button" data-bs-toggle="collapse"
+            <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               Variable Scope: Global vs. Local
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
             data-bs-parent="#accordionExample">
-            <div class="accordion-body fs-5">
+            <div class="accordion-body ">
               A variable's scope is the range of the script where it is visible. Variables have either global or local
               scope. A global variable exists only once in a script, and is visible in every function. Modifications to
               it in one function are permanent and visible to all functions. Unless declared otherwise, all variables in
@@ -81,14 +81,14 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed fs-4" type="button" data-bs-toggle="collapse"
+            <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
               How does the Event Loop works in JavaScript?
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
             data-bs-parent="#accordionExample">
-            <div class="accordion-body fs-5">
+            <div class="accordion-body ">
               The Event Loop has one simple job — to monitor the Call Stack and the Callback Queue. If the Call Stack is
               empty, the Event Loop will take the first event from the queue and will push it to the Call Stack, which
               effectively runs it. Such an iteration is called a tick in the Event Loop.
@@ -97,14 +97,14 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingFour">
-            <button class="accordion-button collapsed fs-4" type="button" data-bs-toggle="collapse"
+            <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
               How many ways we get undefined in javascript?
             </button>
           </h2>
           <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
             data-bs-parent="#accordionExample">
-            <div class="accordion-body fs-5">
+            <div class="accordion-body ">
               Undefined is a property of the global object. That is, it is a variable in global scope. The initial value
               of undefined is the primitive value undefined.In all non-legacy browsers, undefined is a non-configurable,
               non-writable property. (Even when this is not the case, avoid overriding it.)A variable that has not been
